<resources>


    <!-- CONTENT DESCRIPTIONS -->
    <string name="content_app_logo" translatable="false">app_logo</string>
    <string name="app_name" translatable="false">mensaDD</string>
    <string name="nav_food">Canteens</string>
    <string name="nav_map">Map</string>
    <string name="nav_settings">Settings</string>
    <string name="pref_imprint">Imprint</string>
    <string name="nav_license">Licenses</string>
    <string name="nav_card_history">Card balance</string>
    <string name="nav_news">News</string>
    <string name="pref_autostart_summary">Start the app when an eMeal card is discovered.</string>
    <string name="pref_autostart_key" translatable="false">nfc_autostart</string>
    <string name="pref_map_key" translatable="false">offline-map</string>
    <string name="pref_map_summary">If there is a WiFi connection, the map of Dresden gets downloaded to the device when you start the map.</string>
    <string name="pref_autostart_title">Auto start on NFC</string>
    <string name="pref_map_title">Offline map</string>
    <string name="balance_check_balance">Current balance</string>
    <string name="balance_check_last_transaction">Last transaction</string>
    <string name="pref_share_image_key" translatable="false">share_image</string>
    <string name="pref_share_image_title">Share meal images</string>
    <string name="pref_share_image_summary">If available add image when sharing a meal.</string>
    <string name="meals_no_food">Unfortunately there\'s no food today.</string>
    <string name="balance_check_explanation">In order to check your balance enable NFC and just put your phone onto your emeal card. This is possible from everywhere inside the app.</string>

    <string name="imprint_credits">A big thank you to the just mentioned developers, who published their source code as free software and thus supported the development of mensaDD.\n\nFurthermore many thanks to  Paul for his support during implementation and to the  Perry Rhodan Youth for testing during development.\n\nAnd last but not least I\'d like to give a big thanks  to all the people who use this app and their useful feedback! ;-)</string>
    <string name="imprint_license">The NFC balance check uses source code from <![CDATA[<a href="https://github.com/jakobwenzel/MensaGuthaben">Jakob Wenzel</a>]]> and <![CDATA[<a href="https://github.com/codebutler/farebot">Farebot</a>]]>. The graph visualization of the balance history has been realized with <![CDATA[<a href="https://github.com/lecho/hellocharts-android">hellocharts</a>]]>. The map view uses the <![CDATA[<a href="https://www.mapbox.com/android-sdk/">Mapbox Android SDK</a>]]>. The bottom navigation was realized with <![CDATA[<a href="https://github.com/sephiroth74/Material-BottomNavigation">Material-BottomNavigation</a>]]>.\n\nThe source code of mensaDD is available on <![CDATA[<a href="https://github.com/julianctni/mensaDD">GitHub</a>]]>, licensed under GPL.</string>
    <string name="imprint_credits_header">Credits</string>
    <string name="imprint_license_header"><![CDATA[Licenses & co.]]></string>
    <string name="imprint_general">I am not liable for any inaccuracies in the meal data.\nThe meal information gets downloaded from the website of the Studentenwerk Dresden and parsed by an external server.\n\nIf you have any wishes or suggestions, just write me an E-Mail!</string>
    <string name="imprint_general_header">Annotations</string>
    <string name="content_share">Share</string>
    <string name="content_share_hungry">#hungry</string>
    <string name="img_load_no_connection">Due to a missing internet connection the image could not be loaded.</string>
    <string name="load_meals_technical">Due to technical reasons the meals could not be loaded/updated.</string>
    <string name="pref_reset_key" translatable="false">pref_reset</string>
    <string name="balance_saved">Saved current balance.</string>
    <string name="balance_already_saved">Balance has already been saved.</string>
    <string name="balance_check_card_not_supported">Card not supported.</string>
    <string name="balance_check_fail">Card could not be read.</string>
    <string name="balance_check_last_check">Last balance check</string>
    <string name="balance_check_history">Balance history</string>
    <string name="balance_check_last_transactions">Last transactions</string>
    <string name="balance_check_not_enough_data">Not enough data available.</string>
    <string name="balance_check_footnote">The balance data is only stored on your device. If you uninstall the application all data is gone. In order to manually reset all data, go to settings.</string>
    <string name="app_version">Version 3.1 / Aug 2020</string>
    <string name="imprint_developer" translatable="false">Julian Catoni</string>
    <string name="meals_no_food_icon" translatable="false">no_food_today</string>
    <string name="meals_loading_progress">Loading meals...</string>
    <string name="no_meal_image" translatable="false">no meal image</string>
    <string name="vegan_meal" translatable="false">vegan</string>
    <string name="pref_reset_summary">Delete all locally stored meals, favorites and balance data.</string>
    <string name="pref_reset_title">Delete all data</string>
    <string name="pref_dark_mode_key" translatable="false">pref_dark_mode</string>
    <string name="pref_dark_mode_yes" translatable="false">dark</string>
    <string name="pref_dark_mode_no" translatable="false">light</string>
    <string name="pref_dark_mode_auto" translatable="false">auto</string>
    <string-array name="pref_dark_mode_entries">
        <item>Dark mode</item>
        <item>Light mode</item>
        <item>Follow system settings</item>
    </string-array>
    <string-array name="pref_dark_mode_values">
        <item>@string/pref_dark_mode_yes</item>
        <item>@string/pref_dark_mode_no</item>
        <item>@string/pref_dark_mode_auto</item>
    </string-array>
    <string name="pref_dark_mode_title">Dark mode</string>
    <string name="pref_dark_mode_summary">Switch to dark mode</string>
    <string name="pref_dark_mode_follow_system_summary">Choose between dark, light or system mode.</string>
    <string name="send_feedback_mail">Write a feedback mail</string>
    <string name="tutorial_header">Welcome</string>
    <string name="tutorial_design_header">Design</string>
    <string name="tutorial_design_content">The design has been completly updated. The main view now consists of a list of all canteens. The canteens you mostly choose automatically appear at the top of the list. The main menu can be shown by swiping from the right display edge.</string>
    <string name="tutorial_map_header">Map view</string>
    <string name="tutorial_map_content">As an alternative to the list view you are now able to see all canteens on a map which is accessible via the main menu.</string>
    <string name="tutorial_balancehistory_header">Balance history</string>
    <string name="tutorial_balance_header">Balance check (NFC)</string>
    <string name="tutorial_other_header">Other</string>
    <string name="tutorial_button_close">Close</string>
    <string name="tutorial_button_continue">Continue</string>
    <string name="tutorial_button_back">Back</string>
    <string name="tutorial_other_content">Do you like my app? Or do you miss anything? I really look forward to receiving feedback via e-mail (imprint) or a Play Store rating!</string>
    <string name="tutorial_balance_content">To check your eMeal card\'s credit simply put the card on your phone with NFC activated. Your settings will allow you to open mensaDD automatically as soon as the card is recognized.</string>
    <string name="tutorial_balancehistory_content">When you check your balance, you can save the value by pressing the save button. Later you can take a look at the history of your balance checks. This is accessible through the main menu.</string>
    <string name="canteens_loading_progress">Loading canteens...</string>
    <string name="tutorial_header_content">to the version 3.0 of mensaDD! There are some new things you can discover. Have fun with all those changes and  enjoy your meal(s)! ;-)</string>
    <string name="delete_data">Successfully deleted data.</string>
    <string name="pref_key_autostart_set" translatable="false">autostart_set</string>
    <string name="pref_veg_meals_key" translatable="false">pref_veg_meals</string>
    <string name="pref_veg_meals_title">Green meals</string>
    <string name="pref_veg_meals_summary">Add green background to vegan and vegetarian meals.</string>
    <string name="meals_no_image">no image available</string>
    <string name="meals_loading_image">Loading meal image...</string>
    <string name="news_details_button">Details</string>
    <string name="news_share_button">Share</string>
    <string name="icon_favorite">Favorite</string>
    <string name="image_meal">Meal image</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_show_position">Current position</string>
    <string name="menu_send_feedback">Send feedback</string>
    <string name="menu_set_favorite">Set favorite</string>
    <string name="tutorial_navigation_header">Navigation</string>
    <string name="tutorial_navigation_content">The app navigation has been updated. The different views (canteens, map,...) are now reachable from everywhere through the bottom navigation bar.</string>
    <string name="tutorial_favorites_header">Favorites</string>
    <string name="tutorial_favorites_content">You can now mark one or more canteens as your favorite. They will automatically appear at the top of the list. Just look out for the heart icons!</string>
    <string name="tutorial_news_header">News</string>
    <string name="tutorial_news_content">There is a new app section, which fetches the latest news concerning canteens and special offers from the Studentenwerk Dresden. It is reachable through the new bottom navigation. You can also share the news or directly view them on the Studentenwerk\'s website.</string>
    <string name="toast_enable_location">Please enable location services first, then retry.</string>
    <string name="toast_add_favorite">Canteen added to favorites.</string>
    <string name="toast_remove_favorite">Canteen removed from favorites.</string>
    <string name="news_loading_progress">Loading news...</string>
    <string name="toast_loading_news_fail">Could not load news because of missing internet connection.</string>
    <string name="toast_loading_canteens_fail">Could not load canteens because of missing internet connection.</string>
    <string name="toast_loading_meals_fail">Could not load meals because of missing internet connection.</string>
    <string name="pref_bacon_key" translatable="false">pref_bacon</string>
    <string name="toast_bacon" translatable="false">MAKE BAUCHSPECK GREAT AGAIN!</string>
    <string name="imprint_icon_bacon">The bacon icon was created by Jacob Halton from the Noun Project and slightly modified by myself.</string>
    <string name="last_server_check">Last update: %1$s</string>
    <string name="dots" translatable="false">...</string>
    <string name="button_close">Close</string>
    <string name="button_meals">Meals</string>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="location_permission_missing">Permission for location access is needed.</string>
    <string name="location_permission_missing_check">Retry</string>
</resources>
